# cramino

./: .gitignore  Cargo.toml  DEPENDABOT_SETUP.md  README.md
.github/: dependabot.yml
.github/workflows/: dependabot.yml  publish.yml
docs/: histogram-example-scaled.txt  histogram-example.txt
src/: calculations.rs  extract_from_bam.rs  feather.rs  file_info.rs  histograms.rs  karyotype.rs  main.rs  metrics.rs  metrics_processor.rs  phased.rs  splicing.rs  text_output.rs  tsv_output.rs  utils.rs
test-data/: read  small-test-phased.bam.bai  small-test-phased.cram.crai
tests/: json_histograms.rs
