[package]
name = "cramino"
version = "1.2.0"
edition = "2021"
authors = ["Wouter De Coster decosterwouter@gmail.com"]
license = "MIT"
description = "A tool to quickly extract quality metrics from bam or cram files"
readme = "README.md"
homepage = "https://github.com/wdecoster/cramino"
repository = "https://github.com/wdecoster/cramino"
keywords = ["ont", "pacbio", "cram", "bam", "alignment"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rust-htslib = "0.51.0"
log = "0.4.26"
env_logger = "0.11.7"
chrono = "0.4.22" # bumping this seems to break things
rayon = "1.5.3"
arrow = "57.0.0"
unzip-n = "0.1.2"
itertools = "0.14.0"

libz-sys = "1.1.22"
url = "2.5.3"
hts-sys = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
ctor = "0.6.1"
